--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,11 @@ Requires [`getdns`](https://getdnsapi.net/) to be installed and available for co
 - Install `libgetdns-dev` on debian/ubuntu
 - (Nothing to see here Windows folks stuck in a backwards ecosysem)
 
+You're going to need version 1.5.1 of `getdns` for this package to install.
+
+I've gotten this running on macOS and Ubuntu 16.04. For the latter I had to ensure `libidn2-dev` and
+`libunbound-dev` were installed then had to grab the 1.5.1 tarball (e.g. `aria2c https://getdnsapi.net/releases/getdns-1-5-1/getdns-1.5.1.tar.gz`), extract it and `config`/`make`/`make install` (plus `ldconfig` after).
+
 ## TODO/WAT
 
 I finally grok the getdns api so the package api is going to change wildly and fast. It's only going to support DNS over TLS but will support all types of DNS queries. 
