--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ options(width=120)
 
 # clandnstine
 
-Perform 'DNS' over 'TLS' Queries
+Perform Secure-by-default 'DNS' Queries
 
 ## Description
 
@@ -35,7 +35,7 @@ I've gotten this running on macOS and Ubuntu 16.04. For the latter I had to ensu
 
 ## TODO/WAT
 
-I finally grok the getdns api so the package api is going to change wildly and fast. It's only going to support DNS over TLS but will support all types of DNS queries. 
+I finally grok the getdns api so the package api is going to change wildly and fast. The default mode will be to perform queries using DNS over TLS but also supports UDP and TCP transports.
 
 ## Why?
 
@@ -85,15 +85,22 @@ It's stupid slow, consumes more CPU and bandwidth but forces adversaries to work
 
 The following functions are implemented:
 
-
 - `gdns_context`:  Create a gdns DNS over TLS context and populate it with a resolver for use in resolution functions
 - `gdns_get_address`:  Resolve a host to an addrss
+- `gdns_get_resolution_type`:	Get the current resolution type setting
 - `gdns_get_timeout`:  Retreive the number of milliseconds to wait for request to return
+- `gdns_get_tls_ca_file`:	Retreive the file location with CA certificates for verification purposes
+- `gdns_get_tls_ca_path`:	Retreive the value with which the context's upstream recursive servers and suffixes were initialized
+- `gdns_get_transports`:	Retreive what transports are used for DNS lookups.
 - `gdns_lib_version`:  Return gdns library version
 - `gdns_query`:  Arbitrary DNS queries
 - `gdns_set_hosts`:  Initialized the context's local names namespace with values from the given hosts file.
+- `gdns_set_resolution_type`:	Specify whether DNS queries are performed with recursive lookups or as a stub resolver
 - `gdns_set_round_robin_upstreams`:  Set/unset context to round robin queries over the available upstreams when resolving with the stub resolution type.
 - `gdns_set_timeout`:  Specify the number of milliseconds to wait for request to return
+- `gdns_set_tls_ca_file`:	Specify the file with CA certificates for verification purposes
+- `gdns_set_tls_ca_path`:	Specify where the location for CA certificates for verification purposes are located
+- `gdns_set_transports`:	Specifies what transport(s) is/ar used for DNS lookups
 - `gdns_update_resolvers`: Changes the list of resolvers in an already created context for use in resolution functions
 
 ## Installation
@@ -128,6 +135,8 @@ gdns_lib_version()
 (gdns_set_timeout(x, 2000))
 
 (gdns_update_resolvers(x, "1.1.1.1"))
+
+(gdns_set_transports(x, c("udp", "tls", "tcp")))
 
 (gdns_get_address(x, "rud.is"))
 
