--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ Perform Secure-by-default 'DNS' Queries
 
 ## Description
 
-Something something 'DNS. Something something 'TLS'.  Something something 'getdns API/library'.
+Methods are provided to query 'Domain Name System' ('DNS') stub and recursive resolvers for all 'DNS' resource record types using 'UDP',  'TCP', and/or 'TLS' transport layers. 'DNS' query support is provided by the 'getdns' (<getdnsapi.net>) C library.
 
 ## NOTE
 
@@ -35,7 +35,7 @@ I've gotten this running on macOS and Ubuntu 16.04. For the latter I had to ensu
 
 ## TODO/WAT
 
-I finally grok the getdns api so the package api is going to change wildly and fast. The default mode will be to perform queries using DNS over TLS but also supports UDP and TCP transports.
+I finally grok the getdns api so the package api is going to change wildly and fast. The default mode will be to perform queries using DNS over TLS but support is also provided for UDP and TCP transports and either stub or recursive resolvers.
 
 ## Why?
 
