--- a/README.Rmd
+++ b/README.Rmd
@@ -1,24 +1,17 @@
 ---
 output: rmarkdown::github_document
-editor_options: 
-  chunk_output_type: console
 ---
 ```{r pkg-knitr-opts, include=FALSE}
-knitr::opts_chunk$set(collapse=TRUE, fig.retina=2, message=FALSE, warning=FALSE)
-options(width=120)
+hrbrpkghelpr::global_opts()
 ```
 
-[![Travis-CI Build Status](https://travis-ci.org/hrbrmstr/clandnstine.svg?branch=master)](https://travis-ci.org/hrbrmstr/clandnstine) 
-[![Coverage Status](https://codecov.io/gh/hrbrmstr/clandnstine/branch/master/graph/badge.svg)](https://codecov.io/gh/hrbrmstr/clandnstine)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/clandnstine)](https://cran.r-project.org/package=clandnstine)
+```{r badges, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::stinking_badges()
+```
 
-# clandnstine
-
-Perform Secure-by-default 'DNS' Queries
-
-## Description
-
-Perform and process 'DNS over TLS' and 'DNS over HTTPS' queries.
+```{r description, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::yank_title_and_description()
+```
 
 ## NOTE
 
@@ -26,9 +19,9 @@ Requires [`getdns`](https://getdnsapi.net/) to be installed and available for co
 
 - Use `brew install getdns` on macOS
 - Install `libgetdns-dev` or `libgetdns-devel` on debian/ubuntu (version 1.5.1 or higher)
-- (Nothing to see here Windows folks stuck in a backwards ecosysem)
+- Windows support is likely in 2020 since getdns moved to a cmake build system with a primary intent to make Windows a first-class citizen.
 
-You're going to need version 1.5.1 of `getdns` for this package to install.
+You're going to need version 1.5.1+ of `getdns` for this package to install.
 
 I've gotten this running on macOS and Ubuntu 16.04. For the latter I had to ensure `libidn2-0-dev` and
 `libunbound-dev` were installed then had to grab the 1.5.1 tarball (e.g. `aria2c https://getdnsapi.net/releases/getdns-1-5-1/getdns-1.5.1.tar.gz`), extract it and `config`/`make`/`make install` (plus `ldconfig` after).
@@ -85,44 +78,14 @@ It's stupid slow, consumes more CPU and bandwidth but forces adversaries to work
 
 The following functions are implemented:
 
-### Utility
-
-- `to_inaddr_arpa`: Convert a vector of IPv4 addresses to in-addr.arpa format
-
-### DNS over HTTPS
-
-- `doh_post`:   Make a DoH Request (POST/wireformat)
-- `doh_servers`:    Built-in list of DoH servers.
-- `tidy.gdns_doh_response`: Tidy a DoH POST response
-
-### DNS over TLS
-
-- `gdns_query`:  Arbitrary DNS queries
-- `gdns_context`:  Create a gdns DNS over TLS context and populate it with a resolver for use in resolution functions
-- `gdns_get_address`:  Resolve a host to an addrss
-- `gdns_get_resolution_type`:   Get the current resolution type setting
-- `gdns_get_timeout`:  Retreive the number of milliseconds to wait for request to return
-- `gdns_get_tls_ca_file`:   Retreive the file location with CA certificates for verification purposes
-- `gdns_get_tls_ca_path`:   Retreive the value with which the context's upstream recursive servers and suffixes were initialized
-- `gdns_get_transports`:    Retreive what transports are used for DNS lookups.
-- `gdns_lib_version`:  Return gdns library version
-- `gdns_set_hosts`:  Initialized the context's local names namespace with values from the given hosts file.
-- `gdns_set_resolution_type`:   Specify whether DNS queries are performed with recursive lookups or as a stub resolver
-- `gdns_set_round_robin_upstreams`:  Set/unset context to round robin queries over the available upstreams when resolving with the stub resolution type.
-- `gdns_set_timeout`:  Specify the number of milliseconds to wait for request to return
-- `gdns_set_tls_ca_file`:   Specify the file with CA certificates for verification purposes
-- `gdns_set_tls_ca_path`:   Specify where the location for CA certificates for verification purposes are located
-- `gdns_set_transports`:    Specifies what transport(s) is/ar used for DNS lookups
-- `gdns_update_resolvers`: Changes the list of resolvers in an already created context for use in resolution functions
+```{r ingredients, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::describe_ingredients()
+```
 
 ## Installation
 
-```{r install-ex, eval=FALSE}
-devtools::install_git("https://git.sr.ht/~hrbrmstr/clandnstine")
-# or 
-devtools::install_gitlab("hrbrmstr/clandnstine.git")
-# or
-devtools::install_github("hrbrmstr/clandnstine")
+```{r install-ex, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::install_block()
 ```
 
 ## Usage
@@ -209,5 +172,5 @@ cloc::cloc_pkg_md()
 
 ## Code of Conduct
 
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
+Please note that this project is released with a Contributor Code of Conduct.
 By participating in this project you agree to abide by its terms.
