--- a/README.Rmd
+++ b/README.Rmd
@@ -164,6 +164,35 @@ ptr <- doh_post(to_inaddr_arpa("104.244.13.104"), "PTR")
 tidy(ptr)
 ```
 
+### If you _happen_ to have a DNS wireformat record&hellip;
+
+```{r wf}
+str(
+  from_wireformat(
+    as.raw(c(
+      0x00, 0x00, 0x81, 0x80, 0x00, 0x01, 0x00, 0x01, 0x00, 0x00,
+      0x00, 0x00, 0x03, 0x77, 0x77, 0x77, 0x07, 0x65, 0x78, 0x61,
+      0x6d, 0x70, 0x6c, 0x65, 0x03, 0x63, 0x6f, 0x6d, 0x00, 0x00,
+      0x01, 0x00, 0x01, 0x03, 0x77, 0x77, 0x77, 0x07, 0x65, 0x78,
+      0x61, 0x6d, 0x70, 0x6c, 0x65, 0x03, 0x63, 0x6f, 0x6d, 0x00,
+      0x00, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, 0x80, 0x00, 0x04,
+      0xC0, 0x00, 0x02, 0x01
+    ))
+  )
+)
+
+str(
+  from_wireformat(
+    as.raw(c(
+      0x00, 0x00, 0x01, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00,
+      0x00, 0x00, 0x03, 0x77, 0x77, 0x77, 0x07, 0x65, 0x78, 0x61,
+      0x6d, 0x70, 0x6c, 0x65, 0x03, 0x63, 0x6f, 0x6d, 0x00, 0x00,
+      0x01, 0x00, 0x01
+    ))
+  )
+)
+```
+
 ## clandnstine Metrics
 
 ```{r cloc, echo=FALSE}
